--- a/public/phantom-themes.com/lime/theme/templates/admin1/index-2.html
+++ b/public/phantom-themes.com/lime/theme/templates/admin1/index-2.html
@@ -1,14 +1,43 @@
-import React from 'react';
-import logo from './logo.svg';
-import './App.css';
+<!DOCTYPE html>
+<html lang="en">
+    
+<!-- Mirrored from phantom-themes.com/lime/theme/templates/admin1/index.html by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 16 Oct 2020 10:11:06 GMT -->
+<head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="description" content="Responsive Admin Dashboard Template">
+        <meta name="keywords" content="admin,dashboard">
+        <meta name="author" content="stacks">
+        <!-- The above 6 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+        
+        <!-- Title -->
+        <title>Lime - Responsive Admin Dashboard Template</title>
 
-function App() {
-  return (
-    <div>
+        <!-- Styles -->
+        <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700,800,900&amp;display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+        <link href="../../assets/plugins/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+        <link href="../../assets/plugins/font-awesome/css/all.min.css" rel="stylesheet">
+        <link href="../../assets/plugins/toastr/toastr.min.css" rel="stylesheet">  
+
+      
+        <!-- Theme Styles -->
+        <link href="../../assets/css/lime.min.css" rel="stylesheet">
+        <link href="../../assets/css/custom.css" rel="stylesheet">
+
+        <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+        <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+        <!--[if lt IE 9]>
+        <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
+        <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+        <![endif]-->
+    </head>
+    <body>
         <div class='loader'>
-          <div class='spinner-grow text-primary' role='status'>
-              <span class='sr-only'>Loading...</span>
-          </div>
+            <div class='spinner-grow text-primary' role='status'>
+                <span class='sr-only'>Loading...</span>
+            </div>
         </div>
         <div class="modal fade" id="themes-info" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
             <div class="modal-dialog modal-dialog-centered" role="document">
@@ -20,7 +49,7 @@ function App() {
                         </button>
                     </div>
                     <div class="modal-body">
-                        Check out other nice themes by clicking <i class="material-icons" style={{fontSize: "18px", verticalAlign: "middle", margin: "0 5px"}}>layers</i> button at the top right corner of the screen.
+                        Check out other nice themes by clicking <i class="material-icons" style="font-size: 18px; vertical-align: middle; margin: 0 5px;">layers</i> button at the top right corner of the screen.
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-primary" data-dismiss="modal">Close</button>
@@ -55,7 +84,7 @@ function App() {
                         UI Elements
                     </li>
                     <li>
-                        <a href="/"><i class="material-icons">text_format</i>Styles<i class="material-icons has-sub-menu">keyboard_arrow_left</i></a>
+                        <a href="#"><i class="material-icons">text_format</i>Styles<i class="material-icons has-sub-menu">keyboard_arrow_left</i></a>
                         <ul class="sub-menu">
                             <li>
                                 <a href="styles-typography.html">Typography</a>
@@ -72,7 +101,7 @@ function App() {
                         </ul>
                     </li>
                     <li>
-                        <a href="/"><i class="material-icons">apps</i>Components<i class="material-icons has-sub-menu">keyboard_arrow_left</i></a>
+                        <a href="#"><i class="material-icons">apps</i>Components<i class="material-icons has-sub-menu">keyboard_arrow_left</i></a>
                         <ul class="sub-menu">
                             <li>
                                 <a href="ui-alerts.html">Alerts</a>
@@ -131,7 +160,7 @@ function App() {
                         </ul>
                     </li>
                     <li>
-                        <a href="/"><i class="material-icons">code</i>Plugins<i class="material-icons has-sub-menu">keyboard_arrow_left</i></a>
+                        <a href="#"><i class="material-icons">code</i>Plugins<i class="material-icons has-sub-menu">keyboard_arrow_left</i></a>
                         <ul class="sub-menu">
                             <li>
                                 <a href="plugins-crop.html">Image Crop</a>
@@ -163,7 +192,7 @@ function App() {
                         Other
                     </li>
                     <li>
-                        <a href="/"><i class="material-icons">star_border</i>Pages<i class="material-icons has-sub-menu">keyboard_arrow_left</i></a>
+                        <a href="#"><i class="material-icons">star_border</i>Pages<i class="material-icons has-sub-menu">keyboard_arrow_left</i></a>
                         <ul class="sub-menu">
                             <li>
                                 <a href="404.html">404</a>
@@ -195,10 +224,10 @@ function App() {
                         </ul>
                     </li>
                     <li>
-                        <a href="/"><i class="material-icons">bookmark_border</i>Documentation</a>
+                        <a href="#"><i class="material-icons">bookmark_border</i>Documentation</a>
                     </li>
                     <li>
-                        <a href="/"><i class="material-icons">access_time</i>Change Log</a>
+                        <a href="#"><i class="material-icons">access_time</i>Change Log</a>
                     </li>
                 </ul>
             </div>
@@ -210,12 +239,12 @@ function App() {
                 <h3 class="theme-sidebar-title">Themes</h3>
                 <p class="themes-info">Select a demo</p>
                 
-                <a class="theme-item active" href="/">
-                    <img src="../../assets/images/themes/1.png" alt=""/>
+                <a class="theme-item active" href="#">
+                    <img src="../../assets/images/themes/1.png" alt="">
                     <h4 class="theme-title">Classic</h4>
                 </a>
                 <a class="theme-item" href="http://phantom-themes.com/lime/theme/templates/admin2/index.html">
-                    <img src="../../assets/images/themes/2.png" alt=""/>
+                    <img src="../../assets/images/themes/2.png" alt="">
                     <h4 class="theme-title">Dark Theme</h4>
                 </a>
             </div>
@@ -224,34 +253,34 @@ function App() {
         <div class="lime-header">
             <nav class="navbar navbar-expand-lg">
                 <section class="material-design-hamburger navigation-toggle">
-                    <a  href="/"class="button-collapse material-design-hamburger__icon">
+                    <a href="javascript:void(0)" class="button-collapse material-design-hamburger__icon">
                         <span class="material-design-hamburger__layer"></span>
                     </a>
                 </section>
-                <a class="navbar-brand" href="/">Accounts Web Application</a>
+                <a class="navbar-brand" href="#">Lime</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <i class="material-icons">keyboard_arrow_down</i>
                 </button>
 
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <form class="form-inline my-2 my-lg-0 search" id="search">
-                        <input class="form-control mr-sm-2" type="search" placeholder="Search for projects, apps, pages..." aria-label="Search"/>
+                        <input class="form-control mr-sm-2" type="search" placeholder="Search for projects, apps, pages..." aria-label="Search">
                     </form>
                     <ul class="navbar-nav ml-auto">
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle theme-settings-link" href="/">
+                            <a class="nav-link dropdown-toggle theme-settings-link" href="#">
                                 <i class="material-icons">layers</i>
                             </a>
                         </li>
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="/" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            <a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                 <i class="material-icons">more_vert</i>
                             </a>
                             <ul class="dropdown-menu dropdown-menu-right">
-                                <li><a class="dropdown-item" href="/">Account</a></li>
-                                <li><a class="dropdown-item" href="/">Settings</a></li>
+                                <li><a class="dropdown-item" href="#">Account</a></li>
+                                <li><a class="dropdown-item" href="#">Settings</a></li>
                                 <li class="divider"></li>
-                                <li><a class="dropdown-item" href="/">Log Out</a></li>
+                                <li><a class="dropdown-item" href="#">Log Out</a></li>
 
                             </ul>
                         </li>
@@ -265,7 +294,7 @@ function App() {
                     <div class="col-12">
                         <div class="search-results-header">
                             <h4>Search Results</h4>
-                            <a href="/" id="closeSearch"><i class="material-icons">close</i></a>
+                            <a href="#" id="closeSearch"><i class="material-icons">close</i></a>
                         </div>
                     </div>
                 </div>
@@ -273,16 +302,16 @@ function App() {
                     <div class="col-md-4">
                         <ul class="search-result-list user-search">
                             <li>
-                                <img src="../../assets/images/avatars/avatar2.png" alt=""/>
-                                <p>Tom Manchester<br/>(Works at <span class="search-input-value"></span>)</p>
+                                <img src="../../assets/images/avatars/avatar2.png" alt="">
+                                <p>Tom Manchester<br>(Works at <span class="search-input-value"></span>)</p>
                             </li>
                             <li>
-                                <img src="../../assets/images/avatars/avatar5.png" alt=""/>
-                                <p>Luke Williams<br/>(Lives in <span class="search-input-value"></span>)</p>
+                                <img src="../../assets/images/avatars/avatar5.png" alt="">
+                                <p>Luke Williams<br>(Lives in <span class="search-input-value"></span>)</p>
                             </li>
                             <li>
-                                <img src="../../assets/images/avatars/avatar4.png" alt=""/>
-                                <p>People near:<br/><span class="search-input-value"></span></p>
+                                <img src="../../assets/images/avatars/avatar4.png" alt="">
+                                <p>People near:<br><span class="search-input-value"></span></p>
                             </li>
                         </ul>
                     </div>
@@ -345,7 +374,7 @@ function App() {
                                                 <li>Sync content to other devices</li>
                                                 <li>You now have access to File Manager app.</li>
                                             </ul>
-                                            <a href="/" class="btn btn-warning m-t-xs">Learn More</a>
+                                            <a href="#" class="btn btn-warning m-t-xs">Learn More</a>
                                         </div>
                                         <div class="info-image col-md-6"></div>
                                     </div>
@@ -372,8 +401,8 @@ function App() {
                                     <h5 class="card-title">New Customers</h5>
                                     <h2 class="float-right">45.6K</h2>
                                     <p>From last week</p>
-                                    <div class="progress" style={{height: "10px"}}>
-                                        <div class="progress-bar bg-warning" role="progressbar" style={{width: "45%", ariaValuenow:45, ariaValuemin:0, ariaVluemax:100}}></div>
+                                    <div class="progress" style="height: 10px;">
+                                        <div class="progress-bar bg-warning" role="progressbar" style="width: 45%" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100"></div>
                                     </div>
                                 </div>
                             </div>
@@ -384,8 +413,8 @@ function App() {
                                     <h5 class="card-title">Orders</h5>
                                     <h2 class="float-right">14.3K</h2>
                                     <p>Orders in waitlist</p>
-                                    <div class="progress" style={{height: "10px"}}>
-                                        <div class="progress-bar bg-info" role="progressbar" style={{width: "60%", ariaValuenow:"60", ariaValuemin:"0", ariaValuemax:"100"}}></div>
+                                    <div class="progress" style="height: 10px;">
+                                        <div class="progress-bar bg-info" role="progressbar" style="width: 60%" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
                                     </div>
                                 </div>
                             </div>
@@ -396,8 +425,8 @@ function App() {
                                     <h5 class="card-title">Monthly Profit</h5>
                                     <h2 class="float-right">45.6$</h2>
                                     <p>For last 30 days</p>
-                                    <div class="progress" style={{height: "10px"}}>
-                                        <div class="progress-bar bg-success" role="progressbar" style={{width: "45%", ariaValuenow:"45", ariaValuemin:"0", ariaValuemax:"100"}}></div>
+                                    <div class="progress" style="height: 10px;">
+                                        <div class="progress-bar bg-success" role="progressbar" style="width: 45%" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100"></div>
                                     </div>
                                 </div>
                             </div>
@@ -560,8 +589,18 @@ function App() {
             </div>
         </div>
         
-    </div>
-  );
-}
+        
+        <!-- Javascripts -->
+        <script src="../../assets/plugins/jquery/jquery-3.1.0.min.js"></script>
+        <script src="../../assets/plugins/bootstrap/popper.min.js"></script>
+        <script src="../../assets/plugins/bootstrap/js/bootstrap.min.js"></script>
+        <script src="../../assets/plugins/jquery-slimscroll/jquery.slimscroll.min.js"></script>
+        <script src="../../assets/plugins/chartjs/chart.min.js"></script>
+        <script src="../../assets/plugins/apexcharts/dist/apexcharts.min.js"></script>
+        <script src="../../assets/plugins/toastr/toastr.min.js"></script>
+        <script src="../../assets/js/lime.min.js"></script>
+        <script src="../../assets/js/pages/dashboard.js"></script>
+    </body>
 
-export default App;
+<!-- Mirrored from phantom-themes.com/lime/theme/templates/admin1/index.html by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 16 Oct 2020 10:11:06 GMT -->
+</html>
